<resources>
    <string name="app_name">Galaxy Air Services</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="title_hotel">Hotel</string>
    <string name="title_Installment">Installment</string>
    <string name="title_group_members">Group</string>
    <string name="title_profile">Profile</string>
    <string name="title_current_location">Location</string>
    <string name="title_contact">Contact</string>
    <string name="title_activity_maps">Map</string>

    <string name="settings">Settings</string>
    <string name="clear_all_translations">Clear all translations</string>
    <string name="about">About</string>
    <string name="rate_app">Rate app</string>
    <string name="more_apps">More apps</string>
    <string name="share_app">Share app</string>


</resources>
