<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.User_Home"
    android:background="@drawable/bg"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70dp">

        <ImageView
            android:id="@+id/id_logo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <LinearLayout
                        android:id="@+id/id_hotel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@color/colorPrimaryDark">

                        <ImageView
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/hotel"
                            android:tint="@color/colorWhite"
                            android:padding="5dp"/>

                        <TextView
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/title_hotel"
                            android:textColor="@color/colorWhite"
                            android:typeface="monospace"
                            android:padding="5dp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp">

                    <LinearLayout
                        android:id="@+id/id_group"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@color/colorPrimaryDark">

                        <ImageView
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/group"
                            android:tint="@color/colorWhite"
                            android:padding="5dp"/>

                        <TextView
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/title_group_members"
                            android:textColor="@color/colorWhite"
                            android:typeface="monospace"
                            android:padding="5dp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp">

                    <LinearLayout
                        android:id="@+id/id_installment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@color/colorPrimaryDark">

                        <ImageView
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/installment"
                            android:tint="@color/colorWhite"
                            android:padding="5dp"/>

                        <TextView
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:text="@string/title_Installment"
                            android:textColor="@color/colorWhite"
                            android:gravity="center"
                            android:typeface="monospace"
                            android:padding="5dp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/id_location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@color/colorPrimaryDark">

                        <ImageView
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/location"
                            android:tint="@color/colorWhite"
                            android:padding="5dp"/>

                        <TextView
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/title_current_location"
                            android:textColor="@color/colorWhite"
                            android:typeface="monospace"
                            android:padding="5dp"/>

                        <!--<View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorLightGray"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Text"
                            android:padding="5dp"
                            android:textColor="#E0E0E0"/>-->

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp">

                    <LinearLayout
                        android:id="@+id/id_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@color/colorPrimaryDark">

                        <ImageView
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/user"
                            android:tint="@color/colorWhite"
                            android:padding="5dp"/>

                        <TextView
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/title_profile"
                            android:textColor="@color/colorWhite"
                            android:typeface="monospace"
                            android:padding="5dp"/>

                        <!--<View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorLightGray"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Text"
                            android:padding="5dp"
                            android:textColor="#E0E0E0"/>-->

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp">

                    <LinearLayout
                        android:id="@+id/id_contact"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@color/colorPrimaryDark">

                        <ImageView
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/email"
                            android:tint="@color/colorWhite"
                            android:padding="5dp"/>

                        <TextView
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/title_contact"
                            android:textColor="@color/colorWhite"
                            android:typeface="monospace"
                            android:padding="5dp" />

                        <!--<View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorLightGray"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Text"
                            android:padding="5dp"
                            android:textColor="#E0E0E0"/>-->

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>