<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="310dp">

        <LinearLayout
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/id_imageView"
                android:layout_marginTop="7dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/id_layout_facebook"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/dash"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/facebook_box"
                        android:tint="@color/colorFacebook"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Facebook"
                        android:textStyle="bold"
                        android:paddingTop="10dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/id_layout_twitter"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/dash"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/twitter"
                        android:tint="@color/colorTwitter"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Twitter"
                        android:textStyle="bold"
                        android:paddingTop="10dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/id_layout_linkedIn"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:background="@drawable/dash"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/google"
                        android:tint="@color/colorLinkedin"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="LinkedIn"
                        android:textStyle="bold"
                        android:paddingTop="10dp"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="@string/settings"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <LinearLayout
                android:id="@+id/rlClear"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_fb_background"
                    android:tint="@color/colorAccent"/>

                <TextView
                    android:id="@+id/id_txt_email"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/clear_all_translations"/>

            </LinearLayout>-->

            <LinearLayout
                android:id="@+id/rlAbout"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:text="@string/about"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rlRate"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/rate"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_baseline_rate_review_24"
                    android:tint="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/id_txt_rate"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/rate_app"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rlMore"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/more"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_baseline_more_24"
                    android:tint="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/id_txt_more"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/more_apps"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rlShare"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/share"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_baseline_share_24"
                    android:tint="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/id_txt_share"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/share_app"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>